# llm4chemistry

./: .copier-answers.yml  README.md  pyproject.toml  tox.ini
docs/source/: conf.py
docs/source/api/: llmforchemistry.rst  modules.rst
src/llmforchemistry/: __init__.py
tests/: test_example_module.py
